Corrects spacing issue on account management pages. Refs. VO-2442.

--- a/app/styles/pages/_settings.scss
+++ b/app/styles/pages/_settings.scss
@@ -53,7 +53,7 @@ $set-label-width: 40%;
     }
   }
 
-  .controls.static, .enhanced-info {
+  .enhanced-info {
     margin-left: $set-label-width;
   }
 
